# pycsi

./: LICENSE  README.md  pyproject.toml
pycsi/: pycsi.py
pycsi/tests/: test_imports.py
