[tool.poetry]
name = "pycsi"
version = "0.1.0"
description = "Tools for analysis of python code"
authors = ["Gordon Greene <greeng3@obscure-reference.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
