[tool.poetry]
name = "pycsi"
version = "0.1.0"
description = "PyCSI - tools for the analysis of python code."
authors = ["Gordon Greene <greeng3@obscure-reference.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pycsi"}]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
pycsi = "pycsi.pycsi:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
